--- a/css/night.css
+++ b/css/night.css
@@ -15,6 +15,82 @@ a {
   color: white;
   text-decoration: none; }
 
+.star1 {
+  grid-row: 3;
+  grid-column: 2;
+  background-color: yellow;
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  transform: scale(0.2);
+  animation-name: stary-night;
+  animation-duration: 2s;
+  animation-iteration-count: infinite; }
+
+.star2 {
+  grid-row: 2;
+  grid-column: 22;
+  background-color: yellow;
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  transform: scale(0.2);
+  animation-name: stary-night;
+  animation-duration: 2s;
+  animation-iteration-count: infinite; }
+
+.star3 {
+  grid-row: 4;
+  grid-column: 26;
+  background-color: yellow;
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  transform: scale(0.2);
+  animation-name: stary-night;
+  animation-duration: 2s;
+  animation-iteration-count: infinite; }
+
+.star4 {
+  grid-row: 4;
+  grid-column: 18;
+  background-color: yellow;
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  transform: scale(0.2);
+  animation-name: stary-night;
+  animation-duration: 2s;
+  animation-iteration-count: infinite; }
+
+@keyframes stary-night {
+  from {
+    background-color: yellow; }
+  to {
+    background-color: white; } }
+.css-city {
+  font-family: 'Maven Pro', sans-serif;
+  color: #063254;
+  font-size: 50px;
+  grid-row: 2;
+  grid-column: 12/16;
+  z-index: 20;
+  animation-duration: 8s;
+  animation-iteration-count: infinite; }
+
+.vivid-light {
+  background-color: white;
+  grid-row: 1/8;
+  grid-column: 9/24;
+  clip-path: polygon(20% 0, 0% 100%, 100% 0);
+  animation-name: search-light;
+  animation-duration: 8s;
+  animation-iteration-count: infinite;
+  opacity: 0.6; }
+
+@keyframes search-light {
+  0% {
+    transform: skewX(-10deg); }
+  25% {
+    transform: skewX(10deg); }
+  50% {
+    transform: skewX(30deg); }
+  75% {
+    transform: skewX(10deg); }
+  100% {
+    transform: skewX(-10deg); } }
 .moon {
   position: absolute;
   top: 50px;
@@ -30,17 +106,58 @@ a {
 .bat {
   clip-path: polygon(5% 77%, 58% 61%, 93% 24%, 75% 79%);
   background-color: black;
-  grid-row: 2;
-  grid-column: 15/16; }
+  grid-row: 5;
+  grid-column: 10;
+  position: relative;
+  animation-name: bat;
+  animation-duration: 8s;
+  animation-iteration-count: infinite; }
 
+@keyframes bat {
+  0% {
+    left: 0px;
+    top: 0px; }
+  25% {
+    left: 400px;
+    top: -150px; }
+  50% {
+    left: 800px;
+    top: 30px; }
+  75% {
+    left: 0px;
+    top: 200px; }
+  100% {
+    left: 00px;
+    top: 00px; } }
 .bat2 {
   clip-path: polygon(5% 77%, 58% 61%, 93% 24%, 75% 79%);
   background-color: black;
   grid-row: 3;
-  grid-column: 13/14;
-  z-index: 12;
-  transform: rotate(45deg); }
+  grid-column: 12/13;
+  transform: rotate(45deg);
+  position: relative;
+  animation-name: bat2;
+  animation-duration: 8s;
+  animation-iteration-count: infinite;
+  z-index: 5;
+  transform: scale(1.3); }
 
+@keyframes bat2 {
+  0% {
+    left: 30px;
+    top: 30px; }
+  25% {
+    left: -400px;
+    top: -150px; }
+  50% {
+    left: 400px;
+    top: 30px; }
+  75% {
+    left: -250px;
+    top: 200px; }
+  100% {
+    left: 30px;
+    top: 30px; } }
 /*  left hand side garden*/
 .trees1 {
   grid-row: 7;
