--- a/css/afternoon.css
+++ b/css/afternoon.css
@@ -67,7 +67,24 @@ a {
   clip-path: polygon(0 0, 100% 0, 65% 100%, 34% 100%);
   grid-row: 2;
   grid-column: 8/10;
-  border: 10px solid black; }
+  border: 10px solid white;
+  z-index: 7; }
+
+.parachute-person {
+  clip-path: polygon(50% 0, 60% 31%, 98% 35%, 64% 49%, 79% 91%, 50% 70%, 21% 91%, 36% 46%, 2% 35%, 41% 31%);
+  grid-row: 3;
+  grid-column: 8/10;
+  background-color: black;
+  transform: translateY(-45px);
+  box-shadow: inset -10px 12px 31px #fff; }
+
+.person-head {
+  grid-row: 2;
+  grid-column: 8/10;
+  background-color: black;
+  border-radius: 100%;
+  transform: scale(0.4);
+  box-shadow: inset -10px 12px 31px #fff; }
 
 .shark {
   clip-path: polygon(0 0, 10% 100%, 100% 100%);
@@ -92,8 +109,7 @@ a {
     grid-row: 8; }
   to {
     left: 1800px;
-    grid-row: 9;
-    transform: scale(1.3); } }
+    grid-row: 9; } }
 .sun {
   position: absolute;
   top: 300px;
